Adopt for gradle run